fix alignment issues

--- a/src/Components/HackathonPage/TopSection/TopSection.css
+++ b/src/Components/HackathonPage/TopSection/TopSection.css
@@ -1,5 +1,6 @@
     .content-div {
-        margin-left: 50px;
+        padding-top: 20px;
+        text-align: left;
     }
     
     .img-div {
@@ -7,11 +8,8 @@
     }
     
     .top-heading {
-        padding-top: 30px;
-        padding-left: 50px;
-        font-size: 40px;
+        padding-top: 90px;
         padding-bottom: 15px;
-        text-align: center;
     }
     
     .top-text {
@@ -72,6 +70,12 @@
         .btn {
             color: blue;
         }
+        .content-div {
+            text-align: center;
+        }
+        .top-heading {
+            padding-top: 0px;
+        }
     }
     
     @media screen and (min-width: 860px) and (max-width: 1100px) {
@@ -98,7 +102,7 @@
         }
     }
     
-    @media screen and (min-width: 1100px) {
+    /* @media screen and (min-width: 1100px) {
         .btn {
             margin-left: 40px;
         }
@@ -108,4 +112,4 @@
         .btn {
             margin-left: 80px;
         }
-    }
+    } */
